# profound-llms-txt

./: .gitignore  PLAN.md  README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 36115fb36911_add_summary_fields_to_llms_files.py  93fb661ea450_drop_summary_fields_from_llms_files.py  b4b4235162ba_add_slug_to_sites.py  c804a063c269_initial_schema.py  d7e4f5a6b7c8_enforce_one_active_crawl_and_backfill_monitors.py  e8f9a1b2c3d4_collapse_initial_triggered_by_into_manual.py  f1a2b3c4d5e6_drop_page_data_status_code.py  faac4995d7b3_initial_schema.py
backend/app/: config.py  main.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  change_event.py  crawl_job.py  llms_file.py  monitor.py  page_data.py  site.py
backend/app/routers/: _deps.py  crawls.py  llms.py  monitors.py  sites.py
backend/app/schemas/: __init__.py  crawls.py  llms.py  monitors.py  sites.py
backend/app/services/: classifier.py  crawler.py  extract.py  generator.py  playwright_renderer.py  robots.py  scheduler.py  sitemap.py  urls.py
backend/tests/: conftest.py  test_classifier.py  test_extract.py  test_generator.py  test_phase5_change_event_gate.py  test_phase5_monitors_api.py  test_phase5_scheduler.py  test_sitemap.py  test_urls.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: change-timeline.tsx  crawl-progress-banner.tsx  delete-site-dialog.tsx  error-cards.tsx  (+8 more)
(+6 files in other folders)
